--- a/builder.html
+++ b/builder.html
@@ -4,7 +4,7 @@
 		<script async src="https://arc.io/widget.min.js#HEPCFa3K"></script>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>ayunWebEPK</title>
+		<title>EPK Editor</title>
 		<script type="text/javascript" src="jszip.min.js"></script>
 		<script type="text/javascript" src="pako.min.js"></script>
 		<script type="text/javascript" src="sha1.min.js"></script>
@@ -110,7 +110,7 @@
 		<sub><a href=".">Want to compile one instead?</a></sub>
 		<br/>
 		<sub><a href="decompile.html">Want to decompile one instead?</a></sub>
-		<h1>ayunWebEPK</h1>
+		<h1>EPK Editor</h1>
 		<p>Customize EPK files in your browser!</p>
 		Select base .EPK: <input type="file" onchange="selectFile(this);" accept=".epk"/>
 		<br/>
