--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<script async src="https://arc.io/widget.min.js#HEPCFa3K"></script>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>ayunWebEPK</title>
+		<title>EPK Editor</title>
 		<script type="text/javascript" src="jszip.min.js"></script>
 		<script type="text/javascript" src="pako_deflate.min.js"></script>
 		<script type="text/javascript" src="sha1.min.js"></script>
@@ -106,7 +106,7 @@
 		<sub><a href="decompile.html">Want to decompile one instead?</a></sub>
 		<br/>
 		<sub><a href="builder.html">Want to create one instead?</a></sub>
-		<h1>ayunWebEPK</h1>
+		<h1>EPK Editor</h1>
 		<p>Compile EPK files in your browser!</p>
 		Use legacy format: <input type="checkbox"/>
 		<br/>
